force-app/main/default/objects/Aeronave__c/Aeronave__c.object-meta.xml
<CustomObject>
    <label>Aeronave</label>
    <nameField>
        <label>Prefixo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aeronaves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>