force-app/main/default/objects/Aeronave__c/fields/AeronaveEmergencia__c.field-meta.xml
<CustomField>
    <fullName>AeronaveEmergencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aeronave de emergência</label>
    <type>Checkbox</type>
</CustomField>