force-app/main/default/objects/Aeronave__c/fields/AlturaBagageiro__c.field-meta.xml
<CustomField>
    <fullName>AlturaBagageiro__c</fullName>
    <description>Medida da Altura do Bagageiro da Aeronave</description>
    <inlineHelpText>Medida da Altura do Bagageiro da Aeronave</inlineHelpText>
    <label>Altura do Bagageiro</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>