force-app/main/default/objects/Aeronave__c/fields/AnoFabricacao__c.field-meta.xml
<CustomField>
    <fullName>AnoFabricacao__c</fullName>
    <description>Data de fabricação da Aeronave</description>
    <inlineHelpText>Data de fabricação da Aeronave</inlineHelpText>
    <label>Ano de fabricação</label>
    <length>4</length>
    <type>Text</type>
</CustomField>