force-app/main/default/objects/Aeronave__c/fields/BaseMae__c.field-meta.xml
<CustomField>
    <fullName>BaseMae__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Base Mãe da Aeronave</description>
    <inlineHelpText>Base Mãe da Aeronave</inlineHelpText>
    <label>Base Mãe</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Local__c.Base__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Aeronaves Hospedadas</relationshipLabel>
    <relationshipName>AeronaveLocal</relationshipName>
    <type>Lookup</type>
</CustomField>