force-app/main/default/objects/Aeronave__c/fields/CapacidadeTotalCombustivel__c.field-meta.xml
<CustomField>
    <fullName>CapacidadeTotalCombustivel__c</fullName>
    <description>Capacidade total de combustível suportada pela aeronave</description>
    <inlineHelpText>Capacidade total de combustível suportada pela aeronave</inlineHelpText>
    <label>Capacidade Total de Combustível</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>