force-app/main/default/objects/Aeronave__c/fields/ChaveAeronave__c.field-meta.xml
<CustomField>
    <fullName>ChaveAeronave__c</fullName>
    <label>Aircraft Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>