force-app/main/default/objects/Aeronave__c/fields/CodigoDeInterdicao__c.field-meta.xml
<CustomField>
    <fullName>CodigoDeInterdicao__c</fullName>
    <label>Código de interdição</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>