force-app/main/default/objects/Aeronave__c/fields/ConsumoHoraSolo__c.field-meta.xml
<CustomField>
    <fullName>ConsumoHoraSolo__c</fullName>
    <description>Consumo por hora no solo</description>
    <inlineHelpText>Consumo por hora no solo</inlineHelpText>
    <label>Consumo/Hora (Solo)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>