force-app/main/default/objects/Aeronave__c/fields/ConsumoHoraVoo__c.field-meta.xml
<CustomField>
    <fullName>ConsumoHoraVoo__c</fullName>
    <description>Consumo por hora durante o voo</description>
    <inlineHelpText>Consumo por hora durante o voo</inlineHelpText>
    <label>Consumo/Hora (Voo)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>