force-app/main/default/objects/Aeronave__c/fields/DataDeAeronavegabilidade__c.field-meta.xml
<CustomField>
    <fullName>DataDeAeronavegabilidade__c</fullName>
    <label>Data de aeronavegabilidade</label>
    <type>Date</type>
</CustomField>