force-app/main/default/objects/Aeronave__c/fields/DataDeValidade__c.field-meta.xml
<CustomField>
    <fullName>DataDeValidade__c</fullName>
    <label>Data de validade</label>
    <type>Date</type>
</CustomField>