force-app/main/default/objects/Aeronave__c/fields/DataFinalDeArrendamento__c.field-meta.xml
<CustomField>
    <fullName>DataFinalDeArrendamento__c</fullName>
    <label>Data final de arrendamento</label>
    <type>Date</type>
</CustomField>