force-app/main/default/objects/Aeronave__c/fields/Desativada__c.field-meta.xml
<CustomField>
    <fullName>Desativada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca se uma aeronave se encontra desativada</description>
    <inlineHelpText>Marca se uma aeronave se encontra desativada</inlineHelpText>
    <label>Desativada</label>
    <type>Checkbox</type>
</CustomField>