force-app/main/default/objects/Aeronave__c/fields/EstadoDoFornecedor__c.field-meta.xml
<CustomField>
    <fullName>EstadoDoFornecedor__c</fullName>
    <label>Estado do fornecedor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>