force-app/main/default/objects/Aeronave__c/fields/FornecedorDaAeronave__c.field-meta.xml
<CustomField>
    <fullName>FornecedorDaAeronave__c</fullName>
    <label>Fornecedor da aeronave</label>
    <length>255</length>
    <type>Text</type>
</CustomField>