force-app/main/default/objects/Aeronave__c/fields/Idade_da_Aeronave__c.field-meta.xml
<CustomField>
    <fullName>Idade_da_Aeronave__c</fullName>
    <formula>Text( 
  IF(
    (ISNULL(VALUE(AnoFabricacao__c))),
    VALUE(TEXT(YEAR(TODAY()))), 
    YEAR(TODAY()) -( VALUE (AnoFabricacao__c)   )
  ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idade da Aeronave</label>
    <type>Text</type>
</CustomField>