force-app/main/default/objects/Aeronave__c/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <description>Id externo para integrações</description>
    <externalId>true</externalId>
    <inlineHelpText>Id externo para integrações</inlineHelpText>
    <label>Id externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>