force-app/main/default/objects/Aeronave__c/fields/LarguraBagageiro__c.field-meta.xml
<CustomField>
    <fullName>LarguraBagageiro__c</fullName>
    <description>Medida da Largura do Bagageiro da Aeronave</description>
    <inlineHelpText>Medida da Largura do Bagageiro da Aeronave</inlineHelpText>
    <label>Largura do Bagageiro</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>