force-app/main/default/objects/Aeronave__c/fields/ModeloAeronave__c.field-meta.xml
<CustomField>
    <fullName>ModeloAeronave__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Define o modelo de aeronave</description>
    <inlineHelpText>Define o modelo de aeronave</inlineHelpText>
    <label>Modelo de aeronave</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Aeronaves</relationshipLabel>
    <relationshipName>Aeronaves</relationshipName>
    <type>Lookup</type>
</CustomField>