force-app/main/default/objects/Aeronave__c/fields/NomeModelo__c.field-meta.xml
<CustomField>
    <fullName>NomeModelo__c</fullName>
    <description>Nome do modelo vinculado a aeronave</description>
    <formula>ModeloAeronave__r.Name</formula>
    <inlineHelpText>Nome do modelo vinculado a aeronave</inlineHelpText>
    <label>Nome do Modelo</label>
    <type>Text</type>
</CustomField>