force-app/main/default/objects/Aeronave__c/fields/NumeroAssentos__c.field-meta.xml
<CustomField>
    <fullName>NumeroAssentos__c</fullName>
    <description>Número de assentos do aeronave utilizado a princípio para limitar o número de passageiros em um trecho.</description>
    <formula>ModeloAeronave__r.CapacidadePassageiros__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Número de assentos da aeronave</inlineHelpText>
    <label>Número de Assentos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>