force-app/main/default/objects/Aeronave__c/fields/NumeroDeSerie__c.field-meta.xml
<CustomField>
    <fullName>NumeroDeSerie__c</fullName>
    <description>Unique identification number of the vehicle.</description>
    <label>Número de série</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>