force-app/main/default/objects/Aeronave__c/fields/PesoBasicoOperacional__c.field-meta.xml
<CustomField>
    <fullName>PesoBasicoOperacional__c</fullName>
    <description>Indica o peso básico de operação da aeronave incluindo a tripulação.</description>
    <inlineHelpText>Indica o peso básico de operação da aeronave incluindo a tripulação.</inlineHelpText>
    <label>Peso Básico Operacional (PBO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>