force-app/main/default/objects/Aeronave__c/fields/PesoMaximoDecolagem__c.field-meta.xml
<CustomField>
    <fullName>PesoMaximoDecolagem__c</fullName>
    <description>Valor máximo de peso que a aeronave pode decolar. Essa informação é importante para o calculo de disponibilidade de peso.</description>
    <inlineHelpText>Valor máximo de peso que a aeronave pode decolar. Essa informação é importante para o calculo de disponibilidade de peso.</inlineHelpText>
    <label>Peso Máximo de Decolagem (PMD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>