force-app/main/default/objects/Aeronave__c/fields/PesoRealDaAeronave__c.field-meta.xml
<CustomField>
    <fullName>PesoRealDaAeronave__c</fullName>
    <label>Peso real da aeronave</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>