force-app/main/default/objects/Aeronave__c/fields/Posicao__c.field-meta.xml
<CustomField>
    <fullName>Posicao__c</fullName>
    <description>Posição geográfica da aeronave</description>
    <inlineHelpText>Posição geográfica da aeronave</inlineHelpText>
    <label>Posição</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>