force-app/main/default/objects/Aeronave__c/fields/Prefixo__c.field-meta.xml
<CustomField>
    <fullName>Prefixo__c</fullName>
    <description>Id externo para integrações com o prefixo da aeronave</description>
    <externalId>true</externalId>
    <inlineHelpText>Id externo para integrações com o prefixo da aeronave</inlineHelpText>
    <label>Prefixo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>