force-app/main/default/objects/Aeronave__c/fields/ProfundidadeBagageiro__c.field-meta.xml
<CustomField>
    <fullName>ProfundidadeBagageiro__c</fullName>
    <description>Medida da Profundidade do Bagageiro da Aeronave</description>
    <inlineHelpText>Medida da Profundidade do Bagageiro da Aeronave</inlineHelpText>
    <label>Profundidade do Bagageiro</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>