force-app/main/default/objects/Aeronave__c/fields/ProprietarioDaAeronave__c.field-meta.xml
<CustomField>
    <fullName>ProprietarioDaAeronave__c</fullName>
    <label>Proprietário da aeronave</label>
    <length>255</length>
    <type>Text</type>
</CustomField>