force-app/main/default/objects/Aeronave__c/fields/SAR__c.field-meta.xml
<CustomField>
    <fullName>SAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAR</label>
    <type>Checkbox</type>
</CustomField>