force-app/main/default/objects/Aeronave__c/fields/Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit__c</fullName>
    <label>Security Deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>