force-app/main/default/objects/Aeronave__c/fields/TempoSoloAterrissagem__c.field-meta.xml
<CustomField>
    <fullName>TempoSoloAterrissagem__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Tempo de solo da aterrissagem em segundos</inlineHelpText>
    <label>Tempo de Solo Aterrissagem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>