force-app/main/default/objects/Aeronave__c/fields/TempoSoloDecolagem__c.field-meta.xml
<CustomField>
    <fullName>TempoSoloDecolagem__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Tempo de solo da decolagem em segundos</inlineHelpText>
    <label>Tempo de Solo Decolagem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>