force-app/main/default/objects/Aeronave__c/fields/TipoCombustivel__c.field-meta.xml
<CustomField>
    <fullName>TipoCombustivel__c</fullName>
    <description>Tipo de combustível utilizado pela aeronave</description>
    <inlineHelpText>Tipo de combustível utilizado pela aeronave</inlineHelpText>
    <label>Tipo de Combustível</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoCombustivel</valueSetName>
    </valueSet>
</CustomField>