force-app/main/default/objects/Aeronave__c/fields/TipoOperacao__c.field-meta.xml
<CustomField>
    <fullName>TipoOperacao__c</fullName>
    <label>Tipo de Operação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spot</fullName>
            </value>
            <value>
                <fullName>Contrato</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>