force-app/main/default/objects/Aeronave__c/fields/UnidadeMedida__c.field-meta.xml
<CustomField>
    <fullName>UnidadeMedida__c</fullName>
    <description>Unidade de medida utilizada nos dados da aeronave</description>
    <inlineHelpText>Unidade de medida utilizada nos dados da aeronave</inlineHelpText>
    <label>Unidade de Medida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnidadeMedida</valueSetName>
    </valueSet>
</CustomField>