force-app/main/default/objects/Aeronave__c/fields/unitName__c.field-meta.xml
<CustomField>
    <fullName>unitName__c</fullName>
    <description>Campo que identifica uma aeronave no Skytrac</description>
    <inlineHelpText>Campo que identifica uma aeronave no Skytrac</inlineHelpText>
    <label>unitName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>