force-app/main/default/objects/Aeronave__c/fields/VelocidadeCruzeiro__c.field-meta.xml
<CustomField>
    <fullName>VelocidadeCruzeiro__c</fullName>
    <description>Velocidade de Cruzeiro da Aeronave</description>
    <inlineHelpText>Velocidade de Cruzeiro da Aeronave</inlineHelpText>
    <label>Velocidade de Cruzeiro (nm/h)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>