force-app/main/default/objects/Aeronave__c/validationRules/AeronaveTemModelo.validationRule-meta.xml
<ValidationRule>
    <fullName>AeronaveTemModelo</fullName>
    <active>true</active>
    <description>Aeronave deve possuir modelo, regra criada para tratar o fato de não poder criar um mestre detalhes com produto</description>
    <errorConditionFormula>ISBLANK( ModeloAeronave__c )</errorConditionFormula>
    <errorMessage>Uma aeronave deve possuir um modelo</errorMessage>
</ValidationRule>