force-app/main/default/objects/Aeronave__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ModeloAeronave__c</columns>
    <columns>CapacidadeTotalCombustivel__c</columns>
    <columns>BaseMae__c</columns>
    <columns>TipoOperacao__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>